--- a/webdev.html
+++ b/webdev.html
@@ -43,7 +43,7 @@
                     <div class="col s12 m6 l6 services-content" >
                         <div class="col s12">
                             <div class="scroll">
-                                <h4>Social Media Management</h4>
+                                <h4>Website Development and Management</h4>
                                 <p class="grey-text">Today, it is absolutely necessary to have a well coded website as it is one of the best ways to build online presence and connect with the global community. With the help of our specialists, your customers can enjoy accessing a website that meets their demands and satisfies their needs. Furthermore, we will ensure that your websites are regularly maintained and updated to avoid glitches and to upload new content.</p>
                                 <h6>Features of Websites We Create at Deegeelab</h6>
                                 <table class="grey-text paragraph">
