Added why deegeelab;

--- a/index.html
+++ b/index.html
@@ -21,6 +21,39 @@
             <div class="section col s12 bg">
                 <div class="row center shadow">
                     <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu menu-left"><i class="material-icons">menu</i></a>
+                    <ul class="collapsible z-depth-0" data-collapsible="accordion" id='why-deegeelab'>
+                        <li>
+                            <div class="collapsible-header white-text z-depth-0">Why Deegeelab? </div>
+                            <div class="collapsible-body white-text">
+                                <p>
+                                    If time is Money then let us bridge this gap for you. Deegeelab services is designed for SME’s, Providing them with a one stop shop solution for all Digital Marketing, Social Media Management and customer support for both frontend and backend. Let us work as a team within your business with a dedicated account manager working on new strategies new timeline and assisting with that daily action plan. <br/> ith our unique business growth model and expert ongoing support, where our clients can gain a deeper understanding of digital marketing strategies and take advantage of these tools to reach out to their targeted market to attract customers and increase sales.
+                                </p>
+                                <h6>Deegeelab Benifits</h6>
+                                <table class="white-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
+                                        <td>24 hours response time.</td>
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
+                                        <td>Customised and tailor</td>
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
+                                        <td>Expert in an ongoing support and advise</td>
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
+                                        <td>Competitive advantage</td>
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
+                                        <td>Cost effective and flexible payment plan</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </li>
+                    </ul>
                     <div class="layer wrapper" data-depth="0.3" id='nodes'>
                         <svg version="1.1" id="svg" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" x="0px" y="0px" viewBox="-311 185 400 400" xml:space="preserve">
                             <metadata>
@@ -45,7 +78,7 @@
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='3' cx="5.4" cy="289.4" r="34.06"/>
-                                <circle class="fill-blue circle-node" data-node='3' cx="5.4" cy="289.4" r="26.2" data-link='webdev.html' data-name='Website Development' data-image='img1.png' data-desc='Create a creative, mobile-friendly and fully functional website for your business.'/>
+                                <circle class="fill-blue circle-node" data-node='3' cx="5.4" cy="289.4" r="26.2" data-link='webdev.html' data-name='Website Development and Management' data-image='img1.png' data-desc='Create a creative, mobile-friendly and fully functional website for your business.'/>
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='4' cx="55.1" cy="389.3" r="24.7"/>
