--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <p>
                                     If time is Money then let us bridge this gap for you. Deegeelab services is designed for SME’s, Providing them with a one stop shop solution for all Digital Marketing, Social Media Management and customer support for both frontend and backend. Let us work as a team within your business with a dedicated account manager working on new strategies new timeline and assisting with that daily action plan. <br/> ith our unique business growth model and expert ongoing support, where our clients can gain a deeper understanding of digital marketing strategies and take advantage of these tools to reach out to their targeted market to attract customers and increase sales.
                                 </p>
-                                <h6>Deegeelab Benifits</h6>
+                                <h6>Deegeelab Benefits</h6>
                                 <table class="white-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
