Updated and cleaned loading. ;

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </head>
     <body>
         <div id="fullpage">
-            <div class="section col s12 main-section" style="background: #fff; position: relative; top:100px;">
+            <div class="section col s12 main-section" style="position: relative; top:100px;">
+                <div id="display_loadingFilter"></div>
                 <div class="row center shadow">
                     <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu menu-left hide"><i class="material-icons">menu</i></a>
                     <ul class="collapsible z-depth-0 hide" data-collapsible="accordion" id='why-deegeelab'>
@@ -94,7 +95,7 @@
                             <div class="determinate"></div>
                         </div>
                     </h4>
-                    <a href="#pillars" class="btn-flat btn-floating grey-text darken-4 menu hide"><i class="material-icons">mouse</i></a>
+                    <a href="#pillars" class="btn-flat btn-floating grey-text darken-4 hide"><i class="material-icons">mouse</i></a>
                 </div>
             </div>  
             <div class="section col s12 pillar-section hide"><!-- Pillar -->
