--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <body>
         <div id="fullpage">
             <div class="section col s12 main-section" style="position: relative; top:100px;">
-                <div id="display_loadingFilter"></div>
                 <div class="row center shadow">
                     <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu menu-left hide"><i class="material-icons">menu</i></a>
                     <ul class="collapsible z-depth-0 hide" data-collapsible="accordion" id='why-deegeelab'>
@@ -27,7 +26,7 @@
                             <div class="collapsible-header white-text z-depth-0">Why Deegeelab? </div>
                             <div class="collapsible-body white-text">
                                 <p>
-                                    If time is Money then let us bridge this gap for you. Deegeelab services is designed for SME’s, Providing them with a one stop shop solution for all Digital Marketing, Social Media Management and customer support for both frontend and backend. Let us work as a team within your business with a dedicated account manager working on new strategies new timeline and assisting with that daily action plan. <br/> ith our unique business growth model and expert ongoing support, where our clients can gain a deeper understanding of digital marketing strategies and take advantage of these tools to reach out to their targeted market to attract customers and increase sales.
+                                    If time is money then let us bridge this gap for you. Deegeelab is the one-stop shop of SMEs for digital marketing, social media management and customer support for both frontend and backend. Let us work as a team within your business. We have a dedicated account manager working on new strategies and timeline and assisting with the implementation of the daily action plan. <br/>With our unique business growth model and expert ongoing support, our clients can gain a deeper understanding of digital marketing strategies and take advantage of these tools to reach out to their targeted market, attract customers and increase sales.
                                 </p>
                                 <h6>Deegeelab Benefits</h6>
                                 <table class="white-text paragraph">
@@ -37,19 +36,19 @@
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
-                                        <td>Customised and tailor</td>
+                                        <td>Customised and tailored services</td>
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
-                                        <td>Expert in an ongoing support and advise</td>
+                                        <td>Expert ongoing support and advice</td>
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
-                                        <td>Competitive advantage</td>
+                                        <td>Competitive edge</td>
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
-                                        <td>Cost effective and flexible payment plan</td>
+                                        <td>Cost-effective and flexible payment plan</td>
                                     </tr>
                                 </table>
                             </div>
@@ -90,7 +89,7 @@
                         </svg>
                         <div class='list'></div>
                     </div>
-                    <h4 class="grey-text loading" id='display_tagline'>SuperCharge your Business with <b class='logo-color'>Deegeelab</b>
+                    <h4 class="white-text loading shadowed" id='display_tagline'>SuperCharge your Business with <b class='logo-color'>Deegeelab</b>
                         <div class="progress">
                             <div class="determinate"></div>
                         </div>
