--- a/Lead.html
+++ b/Lead.html
@@ -23,7 +23,7 @@
                         <div class="left">
                             <ul>
                                 <li>
-                                    <a href="index.html" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
+                                    <a href="index.html#loaded" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
                                 </li>
                             </ul>
                         </div>
@@ -44,9 +44,9 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Lead Generation</h4>
-                                <p class="grey-text">Lead Generation is a marketing strategy that involves capturing the interest of prospects in the company’s offered products or services in order to develop a sales pipeline. At Deegeelab we use different techniques to generate leads including search engine optimisation, email marketing, direct mail, print advertising, online advertising and paid search.</p>
+                                <p class="black-text">Lead Generation is a marketing strategy that involves capturing the interest of prospects in the company’s offered products or services in order to develop a sales pipeline. At Deegeelab we use different techniques to generate leads including search engine optimisation, email marketing, direct mail, print advertising, online advertising and paid search.</p>
                                 <h6>What We Offer at Deegeelab</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Content Marketing</td>                                
@@ -69,7 +69,7 @@
                                     </tr>
                                 </table>
                                 <h6>Benefits of Lead Generation to Your Business</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Boost your sales</td>                                
