--- a/backend.html
+++ b/backend.html
@@ -23,7 +23,7 @@
                         <div class="left">
                             <ul>
                                 <li>
-                                    <a href="index.html" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
+                                    <a href="index.html#loaded" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
                                 </li>
                             </ul>
                         </div>
@@ -44,9 +44,9 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Customer Support (Back End)</h4>
-                                <p class="grey-text">Make your business expansion your focus by letting us handle your back-end customer support needs. We will turn average processes such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours.<br/>Deegeelab understands your pain points. As a business owner like you, we know how repetitive processes like data entry, document filing, and email management can take up a lot of time to finish.</p>
+                                <p class="black-text">Make your business expansion your focus by letting us handle your back-end customer support needs. We will turn average processes such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours.<br/>Deegeelab understands your pain points. As a business owner like you, we know how repetitive processes like data entry, document filing, and email management can take up a lot of time to finish.</p>
                                 <h6>Features of Deegeelab Back-end Customer Support</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Handle office admin processes</td>                                
@@ -85,7 +85,7 @@
                                     </tr>
                                 </table>
                                 <h6>Benefits of Using Back-end Customer Support</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Enjoy hassle-free management of your business operations</td>                                
