--- a/frontend.html
+++ b/frontend.html
@@ -23,7 +23,7 @@
                         <div class="left">
                             <ul>
                                 <li>
-                                    <a href="index.html" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
+                                    <a href="index.html#loaded" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
                                 </li>
                             </ul>
                         </div>
@@ -44,9 +44,9 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Customer Support (Front End)</h4>
-                                <p class="grey-text">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancellations and other queries from the customers. We provide the following services to customers to keep the business running as smoothly as possible:</p>
+                                <p class="black-text">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancellations and other queries from the customers. We provide the following services to customers to keep the business running as smoothly as possible:</p>
                                 <h6>Features of Deegeelab Customer Support</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Resolve customer complaints via phone, email, mail, or social media</td>                                
@@ -93,7 +93,7 @@
                                     </tr>
                                 </table>
                                 <h6>Benefits of Availing a Front-End Customer Support Service</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>No need to worry on your overhead expenses </td>                                
