--- a/marketing.html
+++ b/marketing.html
@@ -23,7 +23,7 @@
                         <div class="left">
                             <ul>
                                 <li>
-                                    <a href="index.html" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
+                                    <a href="index.html#loaded" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
                                 </li>
                             </ul>
                         </div>
@@ -44,9 +44,9 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Digital Marketing</h4>
-                                <p class="grey-text">Digital marketing is one of the main driving forces of an online business. It is a popular technique used by businesses to build their brand and engage with their target market. To come up with a sound digital marketing strategy, a detailed keyword and competitor research and market analysis are in order.<br/>Additionally, before you can create a digital marketing plan, you must also understand the technical aspects of building a website, writing convincing copies and web content and publishing social media posts.</p>
+                                <p class="black-text">Digital marketing is one of the main driving forces of an online business. It is a popular technique used by businesses to build their brand and engage with their target market. To come up with a sound digital marketing strategy, a detailed keyword and competitor research and market analysis are in order.<br/>Additionally, before you can create a digital marketing plan, you must also understand the technical aspects of building a website, writing convincing copies and web content and publishing social media posts.</p>
                                 <h6>Features of Deegeelab Digital Marketing Service</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>In-depth analysis of your target market, social media channels and websites</td>                                
@@ -69,7 +69,7 @@
                                     </tr>
                                 </table>
                                 <h6>Benefits of Digital Marketing Service for Businesses</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Minimize time spent on planning your digital marketing campaigns</td>                                
