--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -15,13 +15,13 @@
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body class="fullwidth">
+    <body>
     	<div class="container">
             <div class="section services-content">
                 <div class="row">
                     <div class="col s10 m10 l8 offset-s1 offset-m1 offset-l2 enclosed">
                         <div class="row">
-                            <a href="index.html" class="btn-flat btn-floating grey-text darken-4 right"><i class="material-icons black-text">home</i></a>
+                            <a href="index.html#loaded" class="btn-flat btn-floating grey-text darken-4 right"><i class="material-icons black-text">home</i></a>
                         </div>
                         <div class="divider"></div>
                     	<h5 class="bold">Terms and Conditions</h5>
