--- a/webdev.html
+++ b/webdev.html
@@ -23,7 +23,7 @@
                         <div class="left">
                             <ul>
                                 <li>
-                                    <a href="index.html" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
+                                    <a href="index.html#loaded" class="menu btn-flat btn-floating"><i class="material-icons">home</i> </a>
                                 </li>
                             </ul>
                         </div>
@@ -44,9 +44,9 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Website Development and Management</h4>
-                                <p class="grey-text">Today, it is absolutely necessary to have a well coded website as it is one of the best ways to build online presence and connect with the global community. With the help of our specialists, your customers can enjoy accessing a website that meets their demands and satisfies their needs. Furthermore, we will ensure that your websites are regularly maintained and updated to avoid glitches and to upload new content.</p>
+                                <p class="black-text">Today, it is absolutely necessary to have a well coded website as it is one of the best ways to build online presence and connect with the global community. With the help of our specialists, your customers can enjoy accessing a website that meets their demands and satisfies their needs. Furthermore, we will ensure that your websites are regularly maintained and updated to avoid glitches and to upload new content.</p>
                                 <h6>Features of Websites We Create at Deegeelab</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Mobile friendly design</td>                                
@@ -69,7 +69,7 @@
                                     </tr>
                                 </table>
                                 <h6>Benefits of Having a Good Website to Your Business</h6>
-                                <table class="grey-text paragraph">
+                                <table class="black-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Establish brand awareness</td>                                
