Updated and stable version;

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
+    <body style="overflow: hidden;">
         <div id="fullpage">
-            <div class="row home-section ">
+            <div class="section home-section">
                 <div class="bg-section"></div>
-                <div class="main-section center" style="padding-top:100px;">
+                <div class="main-section center loading">
                     <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu menu-left hide"><i class="material-icons">menu</i></a>
                     <ul class="collapsible z-depth-0 hide" data-collapsible="accordion" id='why-deegeelab'>
                         <li>
