--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </svg>
                         <div class='list'></div>
                     </div>
-                    <h4 class="white-text loading shadowed" id='display_tagline'>SuperCharge your Business with <strong><span class='deegee'>Deegee</span><span class='lab'>lab</span></strong>
+                    <h4 class="white-text loading shadowed" id='display_tagline'>SuperCharge your Business with <strong><span class='lab'>Deegeelab</span></strong>
                         <div class="progress">
                             <div class="determinate"></div>
                         </div>
