--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="fullpage">
             <div class="section home-section">
                 <div class="bg-section"></div>
-                <div class="main-section center loading">
+                <div class="main-section center ">
                     <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu menu-left hide"><i class="material-icons">menu</i></a>
                     <ul class="collapsible z-depth-0 hide" data-collapsible="accordion" id='why-deegeelab'>
                         <li>
@@ -194,11 +194,11 @@
                             <div class="card form_holder z-depth-0" style="margin: 0 auto;">
                                 <div class="card-content">
                                     <div class="row">
-                                        <div class="col s12 m5 l4" id='contact_bg'>
+                                        <div class="col s12 m5 l4 i12" id='contact_bg'>
                                             <h4>Let's Talk</h4>
-                                            <p class="black-text">Your success is our success<br> Supercharge your Business Today.</p>
+                                            <p class="black-text i">Your success is our success<br> Supercharge your Business Today.</p>
 
-                                            <table class="grey-text paragraph">
+                                            <table class="grey-text paragraph i">
                                                 <tr>
                                                     <td width='1%'><i class="material-icons">mail_outline</i></td>
                                                     <td>info@deegeelab.com</td>
@@ -217,7 +217,7 @@
                                                 </tr>
                                             </table>
                                         </div>
-                                        <div class="col s12 m7 l8 left-border top-border">
+                                        <div class="col s12 m7 l8 i12 left-border top-border">
                                             <form id="form_query" method="po st" name="form_query">
                                                     <div class="input-field col s12">
                                                         <input class="validate" id="field_name" name="field_name" type="text"> 
@@ -235,9 +235,18 @@
                                                         <input class="validate" id="field_number" name="field_number" type="number"> 
                                                         <label for="field_email">Contact Number</label>
                                                     </div>
-                                                    <div class="input-field col s12">
+                                                    <div class="input-field col s12">Schedule a meeting</div>
+                                                    <div class="input-field col s4">
                                                         <input id='field_date' type='date' id="field_date" name='field_date'>
-                                                        <label for="field_date" class="active">Schedule a meeting</label>
+                                                        <label for="field_date" class="active">Date</label>
+                                                    </div>
+                                                    <div class="input-field col s4">
+                                                        <input id='field_date' type='time' id="field_date" name='field_date'>
+                                                        <label for="field_date" class="active">Time</label>
+                                                    </div>
+                                                    <div class="input-field col s4">
+                                                        <input id='field_date' type='number' id="field_date" name='field_date'>
+                                                        <label for="field_date" class="active">Post code</label>
                                                     </div>
                                                     <div class="input-field col s12">
                                                         <textarea rows='5' class="validate" id="field_message" name="field_message" type="text"></textarea>
